docs/api/qiskit/0.24/qobj.mdx
---
title: qobj
description: API reference for qiskit.qobj
in_page_toc_min_heading_level: 2
python_api_type: module
python_api_name: qiskit.qobj
---

<span id="module-qiskit.qobj" />

<span id="qiskit-qobj" />

<span id="qobj-qiskit-qobj" />

# Qobj

<span id="module-qiskit.qobj" />

`qiskit.qobj`

## Base

|                                                                                                           |                                                                 |
| --------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------- |
| [`Qobj`](qiskit.qobj.Qobj "qiskit.qobj.Qobj")(\[qobj\_id, config, experiments, header])                   | A backwards compat alias for QasmQobj.                          |
| [`QobjExperimentHeader`](qiskit.qobj.QobjExperimentHeader "qiskit.qobj.QobjExperimentHeader")(\*\*kwargs) | A class representing a header dictionary for a Qobj Experiment. |
| [`QobjHeader`](qiskit.qobj.QobjHeader "qiskit.qobj.QobjHeader")(\*\*kwargs)                               | A class used to represent a dictionary header in Qobj objects.  |

## Qasm

|                                                                                                                            |                                                                                                                           |
| -------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------- |
| [`QasmQobj`](qiskit.qobj.QasmQobj "qiskit.qobj.QasmQobj")(\[qobj\_id, config, experiments, header])                        | A QASM Qobj.                                                                                                              |
| [`QasmQobjInstruction`](qiskit.qobj.QasmQobjInstruction "qiskit.qobj.QasmQobjInstruction")(name\[, params, qubits, …])     | A class representing a single instruction in an QasmQobj Experiment.                                                      |
| [`QasmQobjExperimentConfig`](qiskit.qobj.QasmQobjExperimentConfig "qiskit.qobj.QasmQobjExperimentConfig")(\[calibrations]) | Configuration for a single QASM experiment in the qobj.                                                                   |
| [`QasmQobjExperiment`](qiskit.qobj.QasmQobjExperiment "qiskit.qobj.QasmQobjExperiment")(\[config, header, …])              | A QASM Qobj Experiment.                                                                                                   |
| [`QasmQobjConfig`](qiskit.qobj.QasmQobjConfig "qiskit.qobj.QasmQobjConfig")(\[shots, max\_credits, …])                     | A configuration for a QASM Qobj.                                                                                          |
| [`QasmExperimentCalibrations`](qiskit.qobj.QasmExperimentCalibrations "qiskit.qobj.QasmExperimentCalibrations")(gates)     | A container for any calibrations data.                                                                                    |
| [`GateCalibration`](qiskit.qobj.GateCalibration "qiskit.qobj.GateCalibration")(name, qubits, params, …)                    | Each calibration specifies a unique gate by name, qubits and params, and contains the Pulse instructions to implement it. |

## Pulse

|                                                                                                                                     |                                                                       |
| ----------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------- |
| [`PulseQobj`](qiskit.qobj.PulseQobj "qiskit.qobj.PulseQobj")(qobj\_id, config, experiments\[, header])                              | A Pulse Qobj.                                                         |
| [`PulseQobjInstruction`](qiskit.qobj.PulseQobjInstruction "qiskit.qobj.PulseQobjInstruction")(name, t0\[, ch, …])                   | A class representing a single instruction in an PulseQobj Experiment. |
| [`PulseQobjExperimentConfig`](qiskit.qobj.PulseQobjExperimentConfig "qiskit.qobj.PulseQobjExperimentConfig")(\[qubit\_lo\_freq, …]) | A config for a single Pulse experiment in the qobj.                   |
| [`PulseQobjExperiment`](qiskit.qobj.PulseQobjExperiment "qiskit.qobj.PulseQobjExperiment")(instructions\[, config, …])              | A Pulse Qobj Experiment.                                              |
| [`PulseQobjConfig`](qiskit.qobj.PulseQobjConfig "qiskit.qobj.PulseQobjConfig")(meas\_level, meas\_return, …)                        | A configuration for a Pulse Qobj.                                     |
| [`QobjMeasurementOption`](qiskit.qobj.QobjMeasurementOption "qiskit.qobj.QobjMeasurementOption")(name\[, params])                   | An individual measurement option.                                     |
| [`PulseLibraryItem`](qiskit.qobj.PulseLibraryItem "qiskit.qobj.PulseLibraryItem")(name, samples)                                    | An item in a pulse library.                                           |

## Validation

|                                                                                                                             |                                            |
| --------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------ |
| [`validate_qobj_against_schema`](qiskit.qobj.validate_qobj_against_schema "qiskit.qobj.validate_qobj_against_schema")(qobj) | Validates a QObj against the .json schema. |

